--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -66,6 +66,12 @@ jobs:
       run: echo "Skipping tests as no .spec.ts files are present"
       working-directory: ./src/MLS.MatLidStoreUI
 
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+       name: my-artifact  # Tên artifact
+       path: ./src/MLS.MatLidStoreUI/docs  # Đường dẫn đến artifact
+
   deploy:
     runs-on: ubuntu-latest
     needs: build-frontend
@@ -76,7 +82,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # Sử dụng 'token' thay cho 'publish_dir'
-          timeout: 10m  # Thời gian tối đa cho triển khai
+          token: ${{ secrets.GITHUB_TOKEN }}
           artifact_name: 'my-artifact'  # Tên của artifact
-          preview: false  # Tắt preview nếu không cần
+          timeout: 10m
+          preview: false
