--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -66,12 +66,6 @@ jobs:
       run: echo "Skipping tests as no .spec.ts files are present"
       working-directory: ./src/MLS.MatLidStoreUI
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-       name: my-artifact  # Tên artifact
-       path: ./src/MLS.MatLidStoreUI/docs  # Đường dẫn đến artifact
-
   deploy:
     runs-on: ubuntu-latest
     needs: build-frontend
@@ -80,9 +74,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifact_name: 'my-artifact'  # Tên của artifact
-          timeout: 10m
-          preview: false
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./src/MLS.MatLidStoreUI/dist
