--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v3
       with:
-        name: production-files
+        name: github-pages
         path: ./src/MLS.MatLidStoreUI/docs
 
   deploy:
@@ -80,14 +80,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # Tải xuống artifact chứa build files đã được upload
       - name: Download production files
         uses: actions/download-artifact@v3
         with:
-          name: production-files
+          name: github-pages
           path: ./src/MLS.MatLidStoreUI/docs
 
-      # Tạo file .nojekyll để tắt Jekyll
       - name: Create .nojekyll file
         run: echo > ./src/MLS.MatLidStoreUI/docs/.nojekyll
 
@@ -95,4 +93,3 @@ jobs:
         uses: actions/deploy-pages@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./src/MLS.MatLidStoreUI/docs
