--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -107,14 +107,14 @@ jobs:
       working-directory: ./src/MLS.MatLidStoreUI
 
     - name: Build Angular application
-      run: ng build --configuration production --output-path dist --base-href /MatLidStore/
+      run: ng build --configuration production --output-path docs --base-href /MatLidStore/
       working-directory: ./src/MLS.MatLidStoreUI
 
     - name: Create .nojekyll file
-      run: echo > ./src/MLS.MatLidStoreUI/dist/.nojekyll
+      run: echo > ./src/MLS.MatLidStoreUI/docs/.nojekyll
 
     - name: Deploy to GitHub Pages
       uses: actions/deploy-pages@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        working-directory: ./src/MLS.MatLidStoreUI/dist
+        working-directory: ./src/MLS.MatLidStoreUI/docs
