--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -102,6 +102,10 @@ jobs:
       with:
         node-version: '20'
 
+    - name: Install Angular CLI
+      run: npm install -g @angular/cli@16.2.16
+      working-directory: ./src/MLS.MatLidStoreUI
+
     - name: Install dependencies
       run: npm install
       working-directory: ./src/MLS.MatLidStoreUI
