--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -60,35 +60,12 @@ jobs:
       working-directory: ../
 
     - name: Build Angular application with production settings
-      run: ng build --configuration production --output-path docs --base-href /MatLidStore/
+      run: ng build
       working-directory: ./src/MLS.MatLidStoreUI
 
     - name: Test Angular application
       run: echo "Skipping tests as no .spec.ts files are present"
       working-directory: ./src/MLS.MatLidStoreUI
-
-    - name: Remove symlinks in dist folder
-      run: find ./src/MLS.MatLidStoreUI/docs -type l -exec rm {} \;
-
-    - name: Check total artifact size
-      run: du -sh ./src/MLS.MatLidStoreUI/docs
-
-    - name: Clean up unnecessary files before upload
-      run: |
-        find ./src/MLS.MatLidStoreUI/docs -name '*.map' -type f -delete
-        find ./src/MLS.MatLidStoreUI/docs -name '*.test.js' -type f -delete
-        find ./src/MLS.MatLidStoreUI/docs -name 'node_modules' -type d -exec rm -rf {} +
-
-    - name: Upload production-ready build files
-      uses: actions/upload-artifact@v4
-      with:
-        name: github-pages
-        path: ./src/MLS.MatLidStoreUI/docs
-
-    - name: Verify uploaded artifacts
-      run: |
-        echo "Artifacts uploaded:"
-        ls -la ./src/MLS.MatLidStoreUI/docs
 
   deploy:
     runs-on: ubuntu-latest
@@ -113,6 +90,30 @@ jobs:
     - name: Build Angular application
       run: ng build --configuration production --output-path docs --base-href /MatLidStore/
       working-directory: ./src/MLS.MatLidStoreUI
+
+    - name: Check artifact size and content
+      run: |
+        echo "Size of docs directory:"
+        du -sh ./src/MLS.MatLidStoreUI/docs
+        echo "Contents of docs directory:"
+        ls -la ./src/MLS.MatLidStoreUI/docs
+
+    - name: Create .nojekyll file
+      run: echo > ./src/MLS.MatLidStoreUI/docs/.nojekyll
+
+    - name: Clean up unnecessary files
+      run: |
+        find ./src/MLS.MatLidStoreUI/docs -name '*.map' -type f -delete
+        find ./src/MLS.MatLidStoreUI/docs -name 'node_modules' -type d -exec rm -rf {} +
+
+    - name: Check for errors in docs folder
+      run: |
+        if [ -n "$(find ./src/MLS.MatLidStoreUI/docs -type l)" ]; then
+          echo "There are symlinks in the docs directory."
+          exit 1
+        else
+          echo "No symlinks found."
+        fi
 
     - name: Create .nojekyll file
       run: echo > ./src/MLS.MatLidStoreUI/docs/.nojekyll
