--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -122,4 +122,4 @@ jobs:
       uses: actions/deploy-pages@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        working-directory: ./src/MLS.MatLidStoreUI/docs
+        publish_dir: ./src/MLS.MatLidStoreUI/docs
