--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -67,6 +67,12 @@ jobs:
       run: echo "Skipping tests as no .spec.ts files are present"
       working-directory: ./src/MLS.MatLidStoreUI
 
+    - name: Upload production-ready build files
+      uses: actions/upload-artifact@v4
+      with:
+        name: github-pages
+        path: ./src/MLS.MatLidStoreUI/docs
+
   deploy:
     runs-on: ubuntu-latest
     needs: build-frontend
@@ -90,6 +96,12 @@ jobs:
     - name: Build Angular application
       run: ng build --configuration production --output-path docs --base-href /MatLidStore/
       working-directory: ./src/MLS.MatLidStoreUI
+
+    - name: Download production files
+      uses: actions/download-artifact@v4
+      with:
+        name: github-pages
+        path: ./src/MLS.MatLidStoreUI/docs
 
     - name: Check artifact size and content
       run: |
