Switch from Oracle to SQL Server for development
Updated the connection string in `appsettings.Development.json` to use SQL Server. Modified `DesignTimeDbContextFactory.cs` to switch the database provider from Oracle to SQL Server. Updated the migration files and `MatLidStoreDatabaseContextModelSnapshot.cs` to reflect SQL Server-specific configurations. Adjusted the `PersistenceServiceRegistration` class to use the SQL Server connection string.

--- a/src/MLS.Api/appsettings.Development.json
+++ b/src/MLS.Api/appsettings.Development.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MatLidOracleDBConnectionString": "Data Source=192.168.244.130:1521/matliddevdb.net;User Id=system;Password=Matliddev2024",
-    "MatLidSqlServerDBConnectionString": "Data Source=.;Initial Catalog=MatLidStoreIdentityDB;Integrated Security=True;Trust Server Certificate=True"
+    "MatLidSqlServerDBConnectionString": "Data Source=.;Initial Catalog=MLSDevDB;Integrated Security=True;Trust Server Certificate=True"
   },
   "EmailSettings": {
     "ApiKey": "SendGrid-Key",
