Add metadata comments and reformat various files
- Added project metadata comments to multiple files for better documentation.
- Updated `.eslintrc.json` and `angular.json` to format arrays and objects with multi-line syntax for improved readability.
- Changed `request` type in `launch.json` from `launch` to `attach`.
- Incremented version in `package-lock.json` and `package.json` from `0.0.0` to `0.0.1`.
- Made `http` property readonly in `mls-data.service.ts`.
- Replaced `accountService.isLoggedIn()` with `accountService.getCurrentUser()` in `auth.guard.ts`.
- Adjusted margin in `admin-home.component.html` by removing `-m-24` class.
- Added CSS classes for better styling in `footer.component.scss` and `header.component.scss`.
- Added `Logout` button and additional styling to `admin-navbar.component.html`.
- Reformatted `motion-tailwind.css` for consistent indentation and line breaks.
- Improved formatting in `index.html`, `tsconfig.app.json`, `tsconfig.json`, and `tsconfig.spec.json`.
- Modified SVG content in `github-mark-white.svg` and `github-mark.svg` for better readability.

--- a/src/MLS.MatLidStoreUI/.eslintrc.json
+++ b/src/MLS.MatLidStoreUI/.eslintrc.json
@@ -1,10 +1,17 @@
 {
-  "ignorePatterns": ["projects/**/*"],
+  "ignorePatterns": [
+    "projects/**/*"
+  ],
   "root": true,
-  "plugins": ["unused-imports", "simple-import-sort"],
+  "plugins": [
+    "unused-imports",
+    "simple-import-sort"
+  ],
   "overrides": [
     {
-      "files": ["*.ts"],
+      "files": [
+        "*.ts"
+      ],
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
@@ -12,15 +19,23 @@
         "plugin:prettier/recommended"
       ],
       "rules": {
-        "@angular-eslint/sort-ngmodule-metadata-arrays": ["error", {}],
-        "quotes": ["error", "single"],
+        "@angular-eslint/sort-ngmodule-metadata-arrays": [
+          "error",
+          {}
+        ],
+        "quotes": [
+          "error",
+          "single"
+        ],
         "simple-import-sort/exports": "error",
         "simple-import-sort/imports": "error",
         "unused-imports/no-unused-imports": "error"
       }
     },
     {
-      "files": ["*.html"],
+      "files": [
+        "*.html"
+      ],
       "extends": [
         "plugin:@angular-eslint/template/recommended",
         "plugin:@angular-eslint/template/accessibility",
@@ -32,12 +47,18 @@
           {
             "alphabetical": false,
             "order": [
-              "STRUCTURAL_DIRECTIVE", // e.g. `*ngIf="true"`, `*ngFor="let item of items"`
-              "TEMPLATE_REFERENCE", // e.g. `<input #inputRef>`
-              "ATTRIBUTE_BINDING", // e.g. `<input required>`, `id="3"`
-              "INPUT_BINDING", // e.g. `[id]="3"`, `[attr.colspan]="colspan"`, [style.width.%]="100", [@triggerName]="expression", `bind-id="handleChange()"`
-              "TWO_WAY_BINDING", // e.g. `[(id)]="id"`, `bindon-id="id"
-              "OUTPUT_BINDING" // e.g. `(idChange)="handleChange()"`, `on-id="handleChange()"`
+              "STRUCTURAL_DIRECTIVE",
+              // e.g. `*ngIf="true"`, `*ngFor="let item of items"`
+              "TEMPLATE_REFERENCE",
+              // e.g. `<input #inputRef>`
+              "ATTRIBUTE_BINDING",
+              // e.g. `<input required>`, `id="3"`
+              "INPUT_BINDING",
+              // e.g. `[id]="3"`, `[attr.colspan]="colspan"`, [style.width.%]="100", [@triggerName]="expression", `bind-id="handleChange()"`
+              "TWO_WAY_BINDING",
+              // e.g. `[(id)]="id"`, `bindon-id="id"
+              "OUTPUT_BINDING"
+              // e.g. `(idChange)="handleChange()"`, `on-id="handleChange()"`
             ]
           }
         ],
