--- a/src/MLS.MatLidStoreUI/.prettierrc
+++ b/src/MLS.MatLidStoreUI/.prettierrc
@@ -8,7 +8,9 @@
   "trailingComma": "es5",
   "endOfLine": "auto",
   "htmlWhitespaceSensitivity": "ignore",
-  "plugins": ["prettier-plugin-tailwindcss"],
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ],
   "overrides": [
     {
       "files": "*.html",
