--- a/src/MLS.MatLidStoreUI/.vscode/launch.json
+++ b/src/MLS.MatLidStoreUI/.vscode/launch.json
@@ -5,14 +5,14 @@
     {
       "name": "ng serve",
       "type": "chrome",
-      "request": "launch",
+      "request": "attach",
       "preLaunchTask": "npm: start",
       "url": "http://localhost:4200/"
     },
     {
       "name": "ng test",
       "type": "chrome",
-      "request": "launch",
+      "request": "attach",
       "preLaunchTask": "npm: test",
       "url": "http://localhost:9876/debug.html"
     }
